/*
  Localizable.strings
  FirefoxPrivateNetworkVPN
 
  This Source Code Form is subject to the terms of the Mozilla Public
  License, v. 2.0. If a copy of the MPL was not distributed with this
  file, You can obtain one at https://mozilla.org/MPL/2.0/.

  Copyright © 2019 Mozilla Corporation.
*/

// MARK: - Landing Screen
"landingTitle" = "Mozilla VPN";
"landingSubtitle" = "A fast, secure and easy to use VPN. \nBuilt by the makers of Firefox.";
"noLogsTitle" = "No online activity logs";
"noLogsSubtitle" = "We are committed to not monitoring or logging your browsing or network history.";
"encryptionTitle" = "Device-level encryption";
"encryptionSubtitle" = "Encrypt your traffic so that it can’t be read by your ISP or eavesdroppers.";
"manyServersTitle" = "Servers in 30+ countries";
"manyServersSubtitle" = "Pick a server in any country you want and hide your location to throw off trackers.";
"noRestrictionsTitle" = "No bandwidth restrictions";
"noRestrictionsSubtitle" = "Stream, download, and game without limits, monthly caps or ISP throttling.";
"getStarted" = "Get started";
"learnMore" = "Learn more";
"landingSkip" = "Skip";

// MARK: - VPN Home
"homeTabName" = "VPN";

"homeTitleOff" = "VPN is off";
"homeTitleConnecting" = "Connecting…";
"homeTitleOn" = "VPN is on";
"homeTitleSwitching" = "Switching…";
"homeTitleDisconnecting" = "Disconnecting…";

"homeSubtitleOff" = "Turn on to protect your privacy";
"homeSubtitleConnecting" = "Masking connection and location";
"homeSubtitleOn" = "Secure and private  •  %@";
"homeSubtitleSwitching" = "From %1$@ to %2$@";
"homeSubtitleDisconnecting" = "Unmasking connection and location";
"homeSubtitleCheckConnection" = "  •  Check connection";
"homeSubtitleUnstable" = "  Unstable";
"homeSubtitleNoSignal" = "  No signal";
"homeSubtitleWeek" = "1 week";
"homeSubtitleWeekPlus" = "1 week +";

"homeApplicationName" = "Mozilla VPN";
"homeSelectConnection" = "Select location";

// MARK: - Server Selection
"serversNavTitle" = "Select location";

// MARK: - Settings
"settingsTabName" = "Settings";
"settingsItemDevices" = "My devices";
"settingsItemHelp" = "Get help";
"settingsItemAbout" = "About us";
"settingsSignOut" = "Sign out";
"settingsFeedback" = "Give feedback";

"settingsDefaultName" = "VPN User";
"settingsManageAccount" = "Manage account";

// MARK: - Device Management
"devicesNavTitle" = "My devices";
"devicesCount" = "%1$@ of %2$@";
"devicesCurrentDevice" = "Current device";
"devicesAddedDate" = "Added %@ ago";
"devicesLimitTitle" = "Remove a device";
"devicesLimitSubtitle" = "You've reached your limit. To install the VPN on this device, you'll need to remove one.";
"devicesConfirmDeletionTitle" = "Remove device?";
"devicesConfirmDeletionMessage" = "Please confirm you would like to remove %@";
"devicesConfirmDeletion" = "Remove";
"devicesCancelDeletion" = "Cancel";

// MARK: - Get Help
"helpTitle" = "Get help";
"helpContactUs" = "Contact us";
"helpSupport" = "Help & Support";
"helpDebug" = "Debug";

// MARK: - About
"aboutTitle" = "About us";
"aboutTerms" = "Terms of Service";
"aboutPrivacy" = "Privacy Policy";
"aboutAppName" = "Mozilla VPN";
"aboutAppDescription" = "A fast, secure and easy to use VPN. Built by the makers of Firefox.";
"aboutReleaseVersion" = "Release version";

// MARK: - Warning toast
"toastTryAgain" = "Try again";
"toastLoggedOut" = "Signed out and device removed";
"toastNoConnection" = "No internet connection.";
"toastAuthenticationError" = "Authentication error.";

//Mark: - Update
"updateConnection" = "Your connection will not be secure while you update.";
"updateNow" = "Update now";

// MARK: - Update toast
"toastFeaturesAvailable" = "New features are available!";

// Mark: - Recommended Update
"updateRecommended" = "Update recommended";
"updateRecommendedSubtitle" = "Please update the app before you continue to use the VPN";

// Mark: - Required Update
"updateRequired" = "Update required";
"updateRequiredSubtitle" = "We detected and fixed a serious bug. \nYou must update your app.";

//MARK: - Error Descriptions
"errorDeviceRemoval" = "Unable to remove device.";
"errorConnectVPN" = "Unable to connect.";

//MARK: - Email Logs
"logsFileName" = "debug_logs";
"logsMailSubject" = "User Help Request: ";
"logsMailBody" = "User requesting assistance:";
"logsMailDeviceName" = "Device name: ";
"logsMailDeviceDate" = "Added: ";
"logsMailDeviceKey" = "Device public key: ";

//MARK: - Notification
"notificationTitleOn" = "VPN is on";
"notificationBodyOn" = "You’re secure and private";
"notificationTitleOff" = "VPN is off";
"notificationBodyOff" = "You disconnected";
"notificationBodySwitched" = "You switched servers";
"notificationTitleUnstable" = "Unstable";
"notificationBodyUnstable" = "Check your connection";
"notificationTitleNoSignal" = "No signal";
"notificationBodyNoSignal" = "Check your connection";
