...
                        </textField>
                        <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="GCP-NX-e3n">
                            <rect key="frame" x="32" y="32" width="532" height="40"/>
                            <constraints>
                                <constraint firstAttribute="height" constant="40" id="zul-Ms-mrD"/>
                            </constraints>
                            <buttonCell key="cell" type="roundTextured" title="Continue" bezelStyle="texturedRounded" alignment="center" lineBreakMode="truncatingTail" state="on" imageScaling="proportionallyDown" inset="2" id="F6c-xR-VfN">
                                <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                <font key="font" size="15" name="Metropolis-SemiBold"/>
                            </buttonCell>
                            <color key="contentTintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                            <userDefinedRuntimeAttributes>
                                <userDefinedRuntimeAttribute type="color" keyPath="backgroundColor">
...
